- Updated German translation
- Set language and timezone when user logs in with dav
- Various caldav related fixes
- Billing: Fixed problem with "Enter" in the billing items description field to start a new line.
- Added "Download selected" option in the context menu of the file manager. (Creates a zip of the selected files and presents the download dialog.)
- Added a "Limit"(Maximum size) option for the zipped files file size. ($config['zip_max_file_size']  = 256000000;)

07-05-2015 6.1.32
- Drag and drop projects from grid to tree
- Added custom fields to projects portlet on start page
- Added export of subprojects
- Fixed short array syntax problem.

07-05-2015 6.1.31
- Added z-push config constant for modules/z-push/config.php define("BACKEND_GO_DEFAULT_BODY_PREFENCE", SYNC_BODYPREFERENCE_PLAIN); to solve blackbertt password problem:
	https://forums.zarafa.com/showthread.php?10884-BlackBerry-Passport-does-not-get-HTML-email
- Check available storage client side in files upload dialog
- Files tree will expend when a favorite folder item is selected to enersable Up button
- Updated Czech and German translations
- Use putenv to fix charset issues in documents module
- Add config.php option "zpush_always_send_attachments" for testing: http://talk.sonymobile.com/t5/Xperia-Z1-Compact/Z1-Compact-Problem-With-EAS/m-p/866755#11220
- Support multiple email aliases in SMIME verification
- Sort on manager in leave days module
- Added default color set to GO.form.ColorField, removed custom colors from calendar ColorPickerDialog
- Email invites: events can always be updated from an email and a link was added to open the event
- Sieve is working without SSL domain check in PHP 5.6
- Add random $salt to user password for PHP 5.6
- Leaveday: would give an error when trying to delete a Year Credit
- Multiselect group will not select first item on reload when nothing was selected (see groups in user module)

29-04-2015 6.1.30
- Task start time is now optional